[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/world_generator/ui/ResourcePropertyList.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/world_generator/ui/WorldTab.gd" type="Script" id=5]
[ext_resource path="res://addons/world_generator/ui/DataList.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/world_generator/ui/RectEditor.tscn" type="PackedScene" id=7]

[node name="World" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 5 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_right = 839.0
margin_bottom = 564.0
size_flags_horizontal = 3

[node name="RectEditor" parent="HSplitContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 727.0
margin_bottom = 564.0
size_flags_horizontal = 3

[node name="ResourcePropertyList" parent="HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 739.0
margin_right = 839.0
margin_bottom = 564.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 843.0
margin_right = 1016.0
margin_bottom = 564.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 173.0
margin_bottom = 14.0
text = "Continents"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 173.0
margin_bottom = 38.0

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 37.0
margin_bottom = 20.0
text = "Add"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 96.0
margin_bottom = 20.0
text = "Delete"

[node name="Duplicate" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 173.0
margin_bottom = 20.0
text = "Duplicate"

[node name="DataList" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 173.0
margin_bottom = 564.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="VBoxContainer/DataList" method="add_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="VBoxContainer/DataList" method="delete_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Duplicate" to="VBoxContainer/DataList" method="duplicate_button_pressed"]
